Hopefully this is the final touch, After that are bug-fixes (إن شاء الله)